[package]
name = "dockworker"
version = "0.1.0"
edition = "2024"

[features]
default = []
docker = [
    "async-trait",
    "bollard",
    "futures",
    "futures-util",
    "ipnet",
    "reqwest",
    "tar",
    "tempfile",
    "tokio",
    "tracing",
    "sysinfo",
    "uuid",
    "walkdir",
]

[dependencies]
# Core dependencies (always included)
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
thiserror = "1.0"

# Optional dependencies (only with deploy feature)
bollard = { version = "0.14", optional = true }
futures-util = { version = "0.3", optional = true }
ipnet = { version = "2.10.1", optional = true }
tar = { version = "0.4.43", optional = true }
tempfile = { version = "3.14.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.0", optional = true, features = ["v4"] }
reqwest = { version = "0.12.9", features = ["json"], optional = true }
sysinfo = { version = "0.29", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3.31", optional = true }
walkdir = { version = "2.5.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
dockworker = { path = ".", features = ["docker"] }
tokio = { version = "1.0", features = ["full"] }
pretty_assertions = "1.4.1"
reqwest = "0.12.9"

