[package]
name = "dockworker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies (always included)
cfg-if = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
thiserror = "2.0"
log = "0.4"

# Optional dependencies (only with deploy feature)
bollard = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }
ipnet = { version = "2", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.16", optional = true, features = ["v4"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
sysinfo = { version = "0.34", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
walkdir = { version = "2", optional = true }
tracing = { version = "0.1", optional = true }

# Used in tests
color-eyre = { version = "0.6", optional = true }

[dev-dependencies]
dockworker = { path = ".", features = ["docker", "testing"] }
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
reqwest = "0.12"

[features]
default = []
docker = [
    "async-trait",
    "bollard",
    "futures",
    "futures-util",
    "ipnet",
    "reqwest",
    "tar",
    "tempfile",
    "tokio",
    "tracing",
    "sysinfo",
    "uuid",
    "walkdir",
]
testing = ["dep:color-eyre"]