[package]
name = "docktopus"
description = "TBD"
version = "0.4.0-alpha.2"
edition = "2024"
authors = ["Tangle Network"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/docktopus"
rust-version = "1.85"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
async_fn_in_trait = "allow"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
single_match_else = "allow"
uninlined_format_args = "allow"
needless_late_init = "allow"
struct_excessive_bools = "allow"
similar_names = "allow"
assigning_clones = "allow"
transmute_ptr_to_ptr = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
too_many_lines = "allow"
implicit_hasher = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[dependencies]
# Core dependencies (always included)
cfg-if = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
thiserror = "2.0"
log = "0.4"

# Optional dependencies (only with deploy feature)
bollard = { version = "0.19", optional = true }
futures-util = { version = "0.3", optional = true }
ipnet = { version = "2", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.16", optional = true, features = ["v4"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
sysinfo = { version = "0.35", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
walkdir = { version = "2", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
color-eyre = { version = "0.6" }
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
reqwest = "0.12"

[features]
default = ["deploy"]
deploy = [
    "async-trait",
    "bollard",
    "futures",
    "futures-util",
    "ipnet",
    "reqwest",
    "tar",
    "tempfile",
    "tokio",
    "tracing",
    "sysinfo",
    "uuid",
    "walkdir",
]